# GodMode

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  catalog.db  docker-compose.yml  out.json  package-lock.json  package.json  presentation.md  pyproject.toml  test-vertex.js
client/: package-lock.json  vite.config.ts
client/src/: App.css  App.tsx
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/client/: index.html  package.json
frontend/client/src/: App.tsx  index.css
frontend/server/: package.json
frontend/server/src/: imageGenerator.ts  index.ts
frontend/src/: App.css  App.tsx  index.css
prompts/story_engine_prompts/: 00_system_prompt.md  01_architecture.md  02_panel_generation.md  03_checkpoints.md  04_user_narration.md  05_ai_endings.md  06_helpers_and_variables.md  README.md
server/: package-lock.json  package.json
server/src/: index.ts  vertexClient.ts
story_engine/: catalog.py  config.py  main.py  models.py  prefetch.py  session.py
story_engine/agent/: client.py  image_generator.py  parser.py  prompts.py  story_agent.py  tts_agent.py
story_engine/routers/: catalog.py  chapters.py  narration.py  sessions.py  stories.py
tests/: conftest.py
tests/integration/: test_tts_agent.py
tests/unit/: test_catalog.py  test_image_generator.py  test_parser.py  test_prefetch.py  test_prompts.py  test_session.py
